# Fractal

./: Cargo.toml  README.md  build.rs
.github/workflows/: build_and_test.yml  deploy_gh_pages.yml
app/: Cargo.toml  build.rs
app/.cargo/: config.toml
app/run_wasm/: Cargo.toml
app/run_wasm/src/: main.rs  style.css
app/src/: app.rs  gui.rs  lib.rs  main.rs  render.rs  target.rs
app/src/compute/: compute_shader.rs  mod.rs  render_shader.rs  shader.rs  threaded.rs
run_wasm/: Cargo.toml
run_wasm/src/: main.rs
shader/: Cargo.toml  build.rs
shader/computation32/: Cargo.toml  lib.rs
shader/computation64/: Cargo.toml  lib.rs
shader/compute32/: Cargo.toml  lib.rs
shader/compute64/: Cargo.toml  lib.rs
shader/fragment/: Cargo.toml  lib.rs
shader/src/: complex.rs  lib.rs  mandelbrot.rs
shader/vertex32/: Cargo.toml  lib.rs
shader/vertex64/: Cargo.toml  lib.rs
shared/: Cargo.toml
shared/src/: color.rs  complex.rs  compute.rs  lib.rs  render.rs
shared/src/fractal/: burning_ship.rs  cos_leaf.rs  escape_time_method.rs  lyapunov.rs  mandelbrot.rs  mod.rs  multibrot.rs  newton.rs  tricorn.rs
shared/src/math/: complex.rs  function.rs  mod.rs
src/: app.rs  compute.rs  lib.rs  main.rs  quad_cell.rs  render.rs  target.rs
src/compute/: mod.rs  shader.rs  threaded.rs
