[package]
name = "fractal_renderer"
version.workspace = true
edition.workspace = true

[workspace]
members = [
    "shader/vertex32",
    "shader/vertex64",
    "shader/fragment",
    "shader/compute32",
    "shader/compute64",
    "shared",
    "run_wasm"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
glam = { version = "0.24", default-features = false }
bytemuck = { version = "1.13", features = ["derive"] }
spirv-std = "0.9"
fractal_renderer_shared = { path = "./shared" }

[lib]
name="fractal_renderer_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Compile build-dependencies in release mode with the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

[build-dependencies]
spirv-builder = "0.9"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = { version = "0.17", features = ["spirv", "vulkan-portability"] }
winit = "0.28.6"
glam = { workspace = true, default-features = true, features = ["bytemuck"] }
bytemuck = { workspace = true }
fractal_renderer_shared = { workspace = true, features = ["bytemuck"] }
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
