[package]
name = "fractal_renderer"
version.workspace = true
edition.workspace = true

[workspace]
members = [
    "run_wasm"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[lib]
name="fractal_renderer_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Compile build-dependencies in release mode with the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dependencies]
fractal_renderer_shared = { path = "../shared", features = ["bytemuck"] }
pollster = "0.3.0"
wgpu = { version = "0.20.0", features = ["spirv", "vulkan-portability"] }
winit = "0.30.0"
glam = { version = "0.24", features = ["bytemuck"] }
bytemuck = { version = "1.13", features = ["derive"] }
env_logger = "0.11.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.20.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
