[package]
name = "fractal_renderer_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "bytemuck"]
bytemuck = ["dep:bytemuck", "glam/bytemuck"]
std = ["glam/std", "num-traits/std"]
libm = ["glam/libm", "num-traits/libm"]

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

[dependencies]
glam = { version = "0.24.1", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
bytemuck = { version = "1.13.1", features = ["derive"], optional = true }
